--- a/php.ini
+++ b/php.ini
@@ -11,7 +11,7 @@ expose_php = On
 max_execution_time = 30
 max_input_time = 60
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
-display_errors = On
+display_errors = Off
 log_errors = On
 log_errors_max_len = 1024
 default_mimetype = "text/html"
